--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,83 @@
 header {
-  background: red;
+  height: 25vh;
+  background-image: url(../img/light_bulb.png);
+  background-repeat: no-repeat;
+  background-size: 30%;
+  background-position-x: right;
+
+  z-index: 999;
 }
 
 header .container {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  height: 60%;
 }
 
 header .container nav ul {
   display: flex;
-  gap: 1rem;
+  gap: 3rem;
+}
+
+header .container nav ul li a {
+  color: #000;
+}
+
+header .container nav ul li:first-child a {
+  color: #00873e;
+}
+
+.banner {
+  position: absolute;
+  top: 0;
+  background: url(../img/BG.png);
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  z-index: -1;
+  padding-top: 10%;
+}
+
+.banner .container {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+  align-items: center;
+  gap: 3rem;
+}
+
+.banner .container .content h1 {
+  font-size: 3.5rem;
+}
+
+.banner .container .content p {
+  font-size: 1rem;
+  line-height: 1.6rem;
+
+  margin-block: 1.5rem;
+}
+
+.banner .container .content a {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 40%;
+  height: 6vh;
+  background: #00873e;
+
+  color: #fff;
+
+  border-radius: 8px;
+}
+
+.banner .container .content-image {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.banner .container .content-image img {
+  width: 100%;
 }
