--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -61,11 +61,12 @@ header .container .sign-up-and-sign-in a:last-child {
   justify-content: space-between;
   height: 100%;
   align-items: center;
-  gap: 3rem;
+  gap: 4rem;
 }
 
 .banner .container .content h1 {
   font-size: 3.5rem;
+  font-family: "Yeseva One", cursive;
 }
 
 .banner .container .content p {
