--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -44,3 +44,25 @@ body {
 
   border-radius: 4px;
 }
+
+.bg-shadow {
+  height: 10px;
+  width: 100%;
+  position: relative;
+  display: inline-block;
+  border-radius: 10px;
+  box-sizing: border-box;
+}
+.bg-shadow:after {
+  content: "";
+  width: 100%;
+  height: 98%;
+  position: absolute;
+  top: 10px;
+  left: 0px;
+  z-index: -1;
+  -webkit-filter: blur(20px); /* Safari 6.0 - 9.0 */
+  filter: blur(20px);
+
+  background-image: linear-gradient(135deg, #d9f7ff 10%, #ff0000d0 100%);
+}
