--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -6,7 +6,7 @@
 
 :root {
   --font-body: ;
-  --font-title: ;
+  --font-title: "Yeseva One", cursive;
 
   --bg-primary: ;
   --bg-secondary: ;
@@ -38,22 +38,6 @@ body {
   margin-block: 4rem;
 }
 
-#new .container .christmas-wish-and-party .content a,
-#new .container .about-new .content a,
-.banner .container .content a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-  width: 40%;
-  height: 7vh;
-  background: #00873e;
-
-  color: #fff;
-
-  border-radius: 4px;
-}
-
 .bg-shadow {
   height: 10px;
   width: 100%;
@@ -82,6 +66,30 @@ body {
 }
 
 .btn--santa {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 40%;
+  height: 7vh;
+  background: #00873e;
+
+  color: #fff;
+
+  border-radius: 4px;
+  transition: background, 0.4s;
 }
+
 .btn--santa:hover {
+  background: #015e2c;
+}
+
+.text--content-marge {
+  margin-block: 1.5rem;
+}
+
+.header--title {
+  font-size: 3rem;
+  font-family: var(--font-title);
+  font-weight: 300;
 }
