--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -8,9 +8,12 @@
   --font-body: ;
   --font-title: "Yeseva One", cursive;
 
-  --bg-primary: ;
-  --bg-secondary: ;
+  --bg-primary: #d9f7ff;
+  --bg-secondary: #00873e;
+  --bg-secondary-hover: #015e2c;
   --bg-default: ;
+
+  --width-container: 60%;
 }
 
 ul,
@@ -81,7 +84,7 @@ body {
 }
 
 .btn--santa:hover {
-  background: #015e2c;
+  background: var(--bg-secondary-hover);
 }
 
 .text--content-marge {
@@ -92,4 +95,10 @@ body {
   font-size: 3rem;
   font-family: var(--font-title);
   font-weight: 300;
+}
+
+.flex-content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
